# Batch_game

./: app.py  batch_game.html  batch_game_pokémon.bat  index.html  pyproject.toml  replit_zip_error_log.txt  style.css
