[tool.poetry]
name = "repl-html-html-css-js"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_html_css_js"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-mail = "^0.10.0"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
